Task [53323]: Fixing to not appear horizontal scroll over the variables list
Former-commit-id: ab3bb08c7bbacd562614ee1cd9922afb33c456d2

--- a/client/app/components/dashboard/ualReport/ualReportForm/ualFilters/ualFilterCondition/ualFilterCondition.scss
+++ b/client/app/components/dashboard/ualReport/ualReportForm/ualFilters/ualFilterCondition/ualFilterCondition.scss
@@ -99,7 +99,12 @@ ual-filter-condition {
           .autocomplete-list .list-options {
             .autocomplete-item {
               white-space: nowrap;
-              margin-right: 10%;
+              padding-right: 10%;
+              overflow-x: hidden;
+              @include -ms-browser(){
+                margin-right: 30px;
+                padding-right: 10px;
+              }
             }
             .-empty-result {
               padding: 10px 45px;
